Fixed overflow CSS Fixed `$block` value in default form `ixsl:onsubmit`

--- a/src/main/webapp/static/com/atomgraph/linkeddatahub/css/bootstrap.css
+++ b/src/main/webapp/static/com/atomgraph/linkeddatahub/css/bootstrap.css
@@ -87,9 +87,9 @@ li button.btn-edit-constructors, li button.btn-add-data, li button.btn-add-ontol
 .faceted-nav input[type=checkbox]:checked + span { font-weight: bold; }
 .parallax-nav a { cursor: pointer; }
 #content-body { min-height: calc(100% - 14em); }
-#content-body > .row-fluid { overflow-x: auto; margin-bottom: 20px; }
-#content-body > .row-fluid, .constructor-triple.row-fluid { border-bottom: 2px solid rgb(223, 223, 223); }
-#content-body > .row-fluid.drag-over { border-bottom: 4px dotted #0f82f5; }
+#content-body > [about].row-fluid { overflow-x: auto; margin-bottom: 20px; }
+#content-body > [about].row-fluid, .constructor-triple.row-fluid { border-bottom: 2px solid rgb(223, 223, 223); }
+#content-body > [about].row-fluid.drag-over { border-bottom: 4px dotted #0f82f5; }
 .list-mode.active { background-image: url('../icons/ic_navigate_before_black_24px.svg'); }
 legend.create-action { background-image: url('../icons/ic_note_add_black_24px.svg'); background-position: 12px center; background-repeat: no-repeat; padding-left: 40px; }
 alert.violation { background-image: url('../icons/ic_error_white_24px.svg '); background-position: 12px center; background-repeat: no-repeat; padding-left: 40px; }
